acu-frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply overflow-x-hidden bg-black bg-opacity-70;
  }
  html {
    @apply scroll-smooth;
  }
}

/* src/index.css */

html {
  scroll-behavior: smooth; /* Optional: Adds smooth scrolling behavior */
}

/* Custom scrollbar styles */
::-webkit-scrollbar {
  width: 2px; /* Width of the scrollbar */
}

::-webkit-scrollbar-track {
  /* background: #f4f4f4; */
  opacity: 30%;
  border-radius: 6px; /* Optional: Adds rounded corners */
}

::-webkit-scrollbar-thumb {
  background: #888; /* Color of the scrollbar thumb */
  border-radius: 6px; /* Optional: Adds rounded corners */
}

::-webkit-scrollbar-thumb:hover {
  background: #555; /* Changes color on hover */
}

